# Assembly-Code-Assistant

./: Home.py  README.md  pyproject.toml  requirements.txt
pages/: About.py  Demo.py
x86-asm-docs/: index.faiss  index.pkl
